New project structure

--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,77 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cagataygurturk</groupId>
+    <groupId>com.cagataygurturk</groupId>
     <artifactId>aws-lambda-java-boilerplate</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>aws-lambda-java-boilerplate</name>
+
+    <properties>
+        <spring.version>4.2.4.RELEASE</spring.version>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>production</id>
+            <properties>
+                <localrunner.scope>provided</localrunner.scope>
+            </properties>
+            <activation>
+                <property>
+                    <name>env</name>
+                    <value>production</value>
+                </property>
+            </activation>
+        </profile>
+        <profile>
+            <id>test</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <localrunner.scope>compile</localrunner.scope>
+            </properties>
+        </profile>
+    </profiles>
+
+    <repositories>
+        <!--
+             Repository for some custom plugins
+        -->
+        <repository>
+            <id>cagatay-gurturk</id>
+            <url>http://maven.cagataygurturk.com/releases</url>
+        </repository>
+    </repositories>
 
     <dependencies>
 
+        <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.4.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
 
         <!-- LAMBDA SPECIFIC DEPENDENCIES -->
+
+        <!-- LOCAL RUN DEPENDENCIES -->
+        <dependency>
+            <groupId>com.cagataygurturk</groupId>
+            <artifactId>aws-lambda-local-runner</artifactId>
+            <version>0.0.1</version>
+            <!--
+            Scope: provided makes this dependency to be excluded from deployment package
+            So it extremely reduces JAR package size
+
+            -->
+            <scope>${localrunner.scope}</scope>
+        </dependency>
+
+
+        <!-- AWS Lambda dependencies -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
@@ -26,25 +81,25 @@
 
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-events</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.7.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-log4j</artifactId>
             <version>1.0.0</version>
         </dependency>
 
+
+        <!-- Good old JUnit for testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <!--
+                Maven Shade plugin packages the project to a fat JAR with all required dependencies.
+                With minimum dependencies it should create a 5 MB jar file.
+            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -61,17 +116,23 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
+            exec-maven-plugin is used to run and debug the function locally
+
+            See https://github.com/cagataygurturk/aws-lambda-local-runner for more details
+            -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>com.example.lambda.local.LocalRunner</mainClass>
+                    <mainClass>com.cagataygurturk.lambda.LocalRunner</mainClass>
                     <arguments>
-                        <argument>com.example.lambda.MainHandler</argument>
+                        <argument>com.cagataygurturk.example.lambda.MainHandler</argument>
                     </arguments>
                 </configuration>
             </plugin>
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.2</version>
@@ -80,6 +141,9 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
+
+
 </project>
